@@ -445,6 +445,8 @@ it from source control: http://www.mediawiki.org/wiki/Download_from_SVN
 * (bug 12441) ./maintenance/generateSitemap.php fix -fspath requiring
   a trailing slash.
 * (bug 12568) configuration script now produce valid XHTML.
+* The accesskey to edit a page is now disabled when editing the page, to pre-
+  vent conflicts with Safari shortcuts.
 
 === API changes in 1.13 ===
 
